--- a/Tarea 1_ Softwares y Operaciones Basicas.ipynb
+++ b/Tarea 1_ Softwares y Operaciones Basicas.ipynb
@@ -150,7 +150,10 @@
    "source": [
     "#Respuesta Ejercicio 1\n",
     "\n",
-    "\n",
+    "Comando | ¿Qué hace?\n",
+    "------------ | -------------\n",
+    "ls      | Despliega el contenido del directorio\n",
+    "cat     | Muestra el contenido del archivo\n",
     "\n"
    ]
   },
@@ -192,7 +195,7 @@
    "source": [
     "# Pegar Link a Repo aquí\n",
     "\n",
-    "\n",
+    "https://github.com/taconcr/Python-Course/blob/master/tarea2.txt\n",
     "\n",
     "\n"
    ]
@@ -215,27 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite el radio: 40\n",
-      "El area de un circulo es 5026.560000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Respuesta Ejercicio 4\n",
     "\n",
     "# calcula el area de un circulo\n",
     "PI = 3.1416\n",
-    "r = input(\"Digite el radio: \")\n",
-    "radio = int(r)\n",
-    "area = PI * radio ** 2\n",
-    "print(\"El area de un circulo es %f\" %area)\n"
+    "while True:\n",
+    "    try:\n",
+    "        r = input(\"Digite el radio del circulo o ENTER para finalizar: \")\n",
+    "        if r == \"\":\n",
+    "            break;\n",
+    "        radio = int(r)\n",
+    "        area = PI * radio ** 2.0\n",
+    "        print(\"El area de un circulo es %5.10f\" %area)\n",
+    "    except ValueError:\n",
+    "        print('Error: Debe digitar un numero')\n"
    ]
   },
   {
@@ -265,38 +265,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La hipotenusa es 5.000000\n",
-      "El lado b es 9.539392\n",
-      "El lado a es 28.284271\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Respuesta Ejercicio 5\n",
     "# Teorema de Pitagoras\n",
     "# hipotenusa^2 = a^2 + b^2\n",
     "\n",
-    "a = 3\n",
-    "b = 4\n",
-    "hipotenusa = (a ** 2 + b ** 2) ** 0.5\n",
-    "print(\"La hipotenusa es %f\" %hipotenusa)\n",
+    "'''  Attempts to read a number\n",
+    "        if it's ENTER then returns 'ENTER'\n",
+    "        if it's a integer number\n",
+    "           then return the integer number\n",
+    "           else return a string 'NOT NUMBER\n",
+    "'''\n",
+    "def lea_numero(mensaje):\n",
+    "    try:\n",
+    "        a = input(mensaje)\n",
+    "        if a == '':\n",
+    "            return 'ENTER'\n",
+    "        a = int(a)\n",
+    "        return a\n",
+    "    except:\n",
+    "        return 'NOT NUMBER'\n",
     "\n",
-    "a = 3\n",
-    "hipotenusa = 10\n",
-    "b = (hipotenusa ** 2 - a ** 2) ** 0.5\n",
-    "print (\"El lado b es %f\" %b)\n",
     "\n",
-    "b = 10\n",
-    "hipotenusa = 30\n",
-    "b = (hipotenusa ** 2 - b ** 2) ** 0.5\n",
-    "print(\"El lado a es %f\" %b)"
+    "print('Teorema de Pitagoras\\n')\n",
+    "print('     hipotenusa ^ 2 = lado1 ^ 2 + lado2 ^ 2\\n')\n",
+    "print('Digite 2 valores cualquiera y el programa calcula el otro valor\\n')\n",
+    "print('Ejemplo 1: Si digita lado1 = 3 y lado2 = 4 y Hipotenusa = ENTER')\n",
+    "print('El programa le calcula la hipotenusa\\n')\n",
+    "print('Ejemplo 2: Si digita lado1 = 3 y lado2 = ENTER y Hipotenusa = 10')\n",
+    "print('El programa le calcula el lado2\\n')\n",
+    "\n",
+    "while True:\n",
+    "    lado1 = lea_numero('Digite lado1 o ENTER:')\n",
+    "    lado2 = lea_numero('Digite lado2 o ENTER:')\n",
+    "    hipotenusa = lea_numero('Digite hipotenusa o ENTER:')\n",
+    "\n",
+    "    if isinstance(lado1, int) and isinstance(lado2, int) and hipotenusa == 'ENTER':\n",
+    "        hipotenusa = (lado1 ** 2 + lado2 ** 2) ** 0.5\n",
+    "        print(\"{%f} ^ 2 = {%f} ^ 2 + {%f} ^ 2\\n\" %(hipotenusa, lado1, lado2))\n",
+    "    elif isinstance(lado1, int) and lado2 == 'ENTER' and isinstance(hipotenusa, int):\n",
+    "        lado2 = (hipotenusa ** 2 - lado1 ** 2) ** 0.5\n",
+    "        print(\"{%f} ^ 2 = {%f} ^ 2 + {%f} ^ 2\\n\" %(hipotenusa, lado1, lado2))\n",
+    "    elif lado1 == 'ENTER' and isinstance(lado2, int) and isinstance(hipotenusa, int):\n",
+    "        lado1 = (hipotenusa ** 2 - lado2 ** 2) ** 0.5\n",
+    "        print(\"{%f} ^ 2 = {%f} ^ 2 + {%f} ^ 2\\n\" %(hipotenusa, lado1, lado2))\n",
+    "    else:\n",
+    "        print('Debe digitar 2 valores y dejar uno nulo\\n')\n",
+    "    r = input('Si desea realizar otro calculo presione ENTER para SI o cualquier tecla par NO : ')\n",
+    "    if r != '':\n",
+    "        break\n"
    ]
   },
   {
@@ -318,18 +338,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digite el radio en centimetros: 8\n",
-      "El area de un circulo es 201.062400\n",
+      "Digite el radio del cilindro en centimetros o ENTER para finalizar: 8\n",
+      "Digite la altura del cilindro en centimetros: \n",
+      "\n",
+      "ERROR: Debe digitar un numero\n",
+      "\n",
+      "Digite el radio del cilindro en centimetros o ENTER para finalizar: 8\n",
       "Digite la altura del cilindro en centimetros: 15\n",
+      "\n",
+      "volumen del cilindro es 3015.936000 cm3\n",
       "area total del cilindro es 1156.108800 cm3\n",
-      "volumen del cilindro es 3015.936000 cm3\n"
+      "\n",
+      "Digite el radio del cilindro en centimetros o ENTER para finalizar: 15\n",
+      "Digite la altura del cilindro en centimetros: \n",
+      "\n",
+      "ERROR: Debe digitar un numero\n",
+      "\n",
+      "Digite el radio del cilindro en centimetros o ENTER para finalizar: 8\n",
+      "Digite la altura del cilindro en centimetros: 15\n",
+      "\n",
+      "volumen del cilindro es 3015.936000 cm3\n",
+      "area total del cilindro es 1156.108800 cm3\n",
+      "\n",
+      "Digite el radio del cilindro en centimetros o ENTER para finalizar: \n"
      ]
     }
    ],
@@ -338,23 +376,32 @@
     "\n",
     "# calcula el area de un circulo\n",
     "PI = 3.1416\n",
-    "r = input(\"Digite el radio en centimetros: \")\n",
-    "radio = int(r)\n",
-    "area_circulo = PI * radio ** 2\n",
-    "print(\"El area de un circulo es %f\" %area_circulo)\n",
+    "while True:\n",
+    "    try:\n",
+    "        r = input(\"Digite el radio del cilindro en centimetros o ENTER para finalizar: \")\n",
+    "        if r == '':\n",
+    "            break\n",
+    "        \n",
+    "        # calcula el area de un circulo\n",
+    "        radio = int(r)\n",
+    "        area_circulo = PI * radio ** 2\n",
+    "        #print(\"El area de un circulo es %f\" %area_circulo)\n",
+    "    \n",
+    "        h = input(\"Digite la altura del cilindro en centimetros: \")\n",
+    "        print()\n",
     "\n",
-    "# calculo del volumen de un cilindro\n",
-    "h = input(\"Digite la altura del cilindro en centimetros: \")\n",
-    "altura = int(h)\n",
+    "        # calculo del area total del cilindro\n",
+    "        altura = int(h)\n",
+    "        area_cilindro = 2 * area_circulo\n",
+    "        area_lateral_cilindro = 2 * PI * radio * altura\n",
+    "        area_total_cilindro = area_cilindro + area_lateral_cilindro\n",
     "\n",
-    "area_cilindro = 2 * area_circulo\n",
-    "area_lateral_cilindro = 2 * PI * radio * altura\n",
-    "area_total_cilindro = area_cilindro + area_lateral_cilindro\n",
-    "\n",
-    "print(\"area total del cilindro es %f cm3\" %area_total_cilindro)\n",
-    "\n",
-    "volumen_cilindro = PI * radio ** 2 * altura\n",
-    "print(\"volumen del cilindro es %f cm3\" %volumen_cilindro)"
+    "        # calculo del volumen del ciclindro\n",
+    "        volumen_cilindro = PI * radio ** 2 * altura\n",
+    "        print(\"volumen del cilindro es %f cm3\" %volumen_cilindro)\n",
+    "        print(\"area total del cilindro es %f cm3\\n\" %area_total_cilindro)\n",
+    "    except ValueError:\n",
+    "        print('ERROR: Debe digitar un numero\\n')"
    ]
   },
   {
