--- a/Tarea 2 - Sentencias Condicionales y Loops.ipynb
+++ b/Tarea 2 - Sentencias Condicionales y Loops.ipynb
@@ -78,24 +78,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Mundo! Mi nombre es Jaimito y tengo 2 aÃ±os. \n",
+      "\n",
+      "Estoy llevando este curso para divertirme. \n",
+      "\n",
+      "En la segunda clase aprendimos sobre papayas y huevos. \n"
+     ]
+    }
+   ],
    "source": [
     "## Respuesta Ejercicio 2\n",
     "\n",
+    "import os\n",
+    "\n",
     "path = \"C:\\\\Users\\\\tacon\\\\Desktop\\\\Data Analyst Course\\\\Python course\\\\tareas\\\\\"\n",
     "\n",
+    "# datos para rellenar cuando encuentre []\n",
     "arch_datos = open(path + 'introduccion_datos.txt')\n",
     "\n",
-    "with open(path + 'introduccion.txt', 'r+') as arch_ent:\n",
+    "# nuevo archivo de salida\n",
+    "arch_sal = open(path + 'temp.txt', 'w')\n",
+    "\n",
+    "with open(path + 'introduccion.txt') as arch_ent:\n",
     "    for linea in arch_ent:\n",
     "        while linea.find('[]') != -1:\n",
-    "            linea = linea.replace('[]',arch_datos.readline(), 1)\n",
-    "        arch_ent.write(linea)\n",
+    "            linea = linea.replace('[]', arch_datos.readline(), 1)\n",
+    "            linea = linea.replace('\\n', '', 1)\n",
+    "        arch_sal.write(linea+'\\n')\n",
     "        print(linea)\n",
     "\n",
-    "arch_datos.close()"
+    "arch_datos.close()\n",
+    "arch_sal.close()\n",
+    "\n",
+    "if os.path.isfile(path + 'introduccion_nuevo.txt'):\n",
+    "    os.remove(path + 'introduccion_nuevo.txt')\n",
+    "os.rename(path + 'temp.txt', path + 'introduccion_nuevo.txt')"
    ]
   },
   {
